checkout add left side, add checkout form

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -8,7 +8,36 @@
                     <img class="checkout_product_img" src="img/product.png" alt="product">
                 </div>
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <div class="checkout_title">
+                    Оставьте заявку
+                </div>
+                <div class="chekcout_subtitle">
+                    Внимательно заполните форму, от этого зависит то, насколько быстро мы сможем вам помочь
+                </div>
+                <div class="checkout_form">
+                <div class="checkout_form__block">   
+                    <div class="checkout_form__title">
+                        Контактная информация
+                    </div>
+                    <form action="#">
+                        <div class="checkout__line">
+                            <label for="in_name" class="checkout__line_label"></label>
+                            <input id="in_name" class="checkout__line_input" placeholder="Ваше имя">
+                        </div>
+                        <div class="checkout__line">
+                            <label for="in_phone" class="checkout__line_label"></label>
+                            <input id="in_phone" class="checkout__line_input" placeholder="Ваш телефон">
+                        </div>
+                        <div class="checkout__line">
+                            <label for="in_mail" class="checkout__line_label"></label>
+                            <input id="in_mail" class="checkout__line_input" placeholder="Ваш E-Mail">
+                        </div>
+                    </div>
+                        </form>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
